<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foto_fondo"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="335dp"
        android:backgroundTint="@color/amarilloClaro"
        android:ems="10"
        android:hint="@string/txtCorreo"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/etCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="95dp"
        android:layout_marginBottom="275dp"
        android:backgroundTint="@color/amarilloClaro"
        android:ems="10"
        android:hint="@string/txtContrasenna"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/btnIniciarSesión"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/boton_iniciarsesion"
        android:onClick="iniciarSesion"
        android:text="@string/txtIniciarSesion"
        android:textColor="@color/amarilloClaro"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/boton_redondeado"
        android:onClick="Registrar"
        android:text="@string/txtRegistrar"
        android:textColor="@color/moradoOscuro"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="178dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

</RelativeLayout>