<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foto_fondo"
    tools:context=".ActivityRegistrar"
    tools:ignore="ExtraText">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="275dp"
        android:backgroundTint="@color/amarilloClaro"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="90dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/etCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="@color/amarilloClaro"
        android:ems="10"
        android:hint="@string/txtContrasenna"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="90dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/txtCrearCuenta"
        android:textColor="@color/moradoOscuro"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="56dp" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="100dp"
        android:text="@string/txtRegistro"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="151dp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/amarilloClaro"
        android:ems="10"
        android:hint="@string/txtNombUsur"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="90dp" />

    <EditText
        android:id="@+id/etConfirma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="425dp"
        android:backgroundTint="@color/amarilloClaro"
        android:ems="10"
        android:hint="@string/txtConfirmar"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="90dp"
        android:layout_alignParentLeft="true" />

</RelativeLayout>